--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     this.audioPlayer = new Audio(url);
                     this.audioPlayer.play();
                 },
-                メッセージ送信に関する関数
+                // メッセージ送信に関する関数
                 sendMessage() {
                     if ((!this.userInput.trim() && !this.selectedImageFile) || this.isLoading) return;
 
