--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 recognition: null,
                 selectedImage: null,
                 selectedImageFile: null,
-                backendUrl: 'https://24c7-35-184-242-39.ngrok-free.app', // 例: https://abcd-123-456-789-10.ngrok.io
+                backendUrl: 'https://be04-34-125-24-139.ngrok-free.app', // google colab側で表示されているPublic URLを貼り付け
                 enableVoice: false,
                 audioPlayer: null
             },
