--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                 recognition: null,
                 selectedImage: null,
                 selectedImageFile: null,
-                backendUrl: 'https://2c49-34-125-24-139.ngrok-free.app', // google colab側で表示されているPublic URLを貼り付け
+                backendUrl: 'https://e914-34-125-24-139.ngrok-free.app', // google colab側で表示されているPublic URLを貼り付け
                 enableVoice: false,
                 audioPlayer: null
             },
