--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                 recognition: null,
                 selectedImage: null,
                 selectedImageFile: null,
-                backendUrl: 'https://b826-34-16-230-192.ngrok-free.app' // 例: https://abcd-123-456-789-10.ngrok.io
+                backendUrl: 'https://aa3f-34-16-230-192.ngrok-free.app' // 例: https://abcd-123-456-789-10.ngrok.io
             },
             mounted() {
                 // 音声認識のセットアップ（ブラウザがサポートしている場合）
