Update and rename index_ver2.html to index.html

--- a/index/index.html
+++ b/index/index.html
@@ -465,7 +465,7 @@
                 recognition: null,
                 selectedImage: null,
                 selectedImageFile: null,
-                backendUrl: 'https://be04-34-125-24-139.ngrok-free.app', // google colab側で表示されているPublic URLを貼り付け
+                backendUrl: 'https://98bc-34-16-230-192.ngrok-free.app', // google colab側で表示されているPublic URLを貼り付け
                 enableVoice: false,
                 audioPlayer: null
             },
